--- a/HSEBuildings/Base.lproj/Main.storyboard
+++ b/HSEBuildings/Base.lproj/Main.storyboard
@@ -41,7 +41,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xXB-hx-PrM">
+                            <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="textFieldFrom" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xXB-hx-PrM">
                                 <rect key="frame" x="53" y="43" width="306" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="PW0-fj-6yM"/>
@@ -50,7 +50,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LrO-aW-bdv">
+                            <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="textFieldTo" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LrO-aW-bdv">
                                 <rect key="frame" x="53" y="73" width="306" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="sht-XO-dz4"/>
